fix(Flex): allow classes to be passed, fixed layout problems
min-width: 0 added to prevent flex elements growing when they shouldn't.

--- a/components/layout/FlexGroup.module.scss
+++ b/components/layout/FlexGroup.module.scss
@@ -1,6 +1,7 @@
 .flex-group {
   display: flex;
   min-height: 0;
+  min-width: 0;
 
   &.align-stretch {
     align-items: stretch;
